README updates and minor fixes